# ChangeLog for media-fonts/mplus-outline-fonts
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/mplus-outline-fonts/ChangeLog,v 1.37 2012/10/08 10:01:49 hattya Exp $

*mplus-outline-fonts-0_pre052 (08 Oct 2012)

  08 Oct 2012; Akinori Hattori <hattya@gentoo.org>
  +mplus-outline-fonts-0_pre052.ebuild:
  new upstream release.

*mplus-outline-fonts-0_pre046 (28 Jan 2012)

  28 Jan 2012; MATSUU Takuto <matsuu@gentoo.org>
  +mplus-outline-fonts-0_pre046.ebuild:
  Version bumped.

*mplus-outline-fonts-0_pre043-r1 (18 Dec 2011)

  18 Dec 2011; Naohiro Aota <naota@gentoo.org>
  +mplus-outline-fonts-0_pre043-r1.ebuild:
  Improve DESCRIPTION, HOMEPAGE and LICENSE. patch by
  demmamussabebonk@gmail.com bug 393301

  03 Dec 2011; Fabian Groffen <grobian@gentoo.org>
  mplus-outline-fonts-0_pre043.ebuild:
  Fix USE=ipafont for Prefix, bump to EAPI=3, by MATSUI Tetsushi in bug #393001

*mplus-outline-fonts-0_pre043 (30 Sep 2011)

  30 Sep 2011; MATSUU Takuto <matsuu@gentoo.org>
  -mplus-outline-fonts-0_pre037.ebuild, +mplus-outline-fonts-0_pre043.ebuild:
  Version bumped. Removed old version.

  14 Jun 2011; Fabian Groffen <grobian@gentoo.org>
  mplus-outline-fonts-0_pre040.ebuild:
  Marked ~x86-macos (#369547) and ~ppc-macos

*mplus-outline-fonts-0_pre040 (09 Jun 2011)

  09 Jun 2011; MATSUU Takuto <matsuu@gentoo.org>
  -mplus-outline-fonts-0_pre033.ebuild, -mplus-outline-fonts-0_pre035.ebuild,
  +mplus-outline-fonts-0_pre040.ebuild:
  Version bumped. Removed old versions.

*mplus-outline-fonts-0_pre037 (30 Mar 2011)

  30 Mar 2011; MATSUU Takuto <matsuu@gentoo.org>
  +mplus-outline-fonts-0_pre037.ebuild:
  Version bumped.

*mplus-outline-fonts-0_pre035 (29 Dec 2010)

  29 Dec 2010; MATSUU Takuto <matsuu@gentoo.org>
  -mplus-outline-fonts-0_pre029.ebuild, +mplus-outline-fonts-0_pre035.ebuild:
  Version bumped. Removed old version.

*mplus-outline-fonts-0_pre033 (02 Oct 2010)
