@@ -1,6 +1,12 @@
 # ChangeLog for media-fonts/mplus-outline-fonts
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/mplus-outline-fonts/ChangeLog,v 1.37 2012/10/08 10:01:49 hattya Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/mplus-outline-fonts/ChangeLog,v 1.38 2013/05/23 14:15:22 hattya Exp $
+
+*mplus-outline-fonts-0_pre055 (23 May 2013)
+
+  23 May 2013; Akinori Hattori <hattya@gentoo.org>
+  +mplus-outline-fonts-0_pre055.ebuild:
+  new upstream release
 
 *mplus-outline-fonts-0_pre052 (08 Oct 2012)
 
